--- a/package.json
+++ b/package.json
@@ -1,28 +1,28 @@
 {
-  "name": "ethereumjs-util",
+  "name": "puffscoinjs-util",
   "version": "6.1.0",
-  "description": "a collection of utility functions for Ethereum",
+  "description": "a collection of utility functions for PUFFScoin",
   "main": "dist/index.js",
   "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
-    "build": "ethereumjs-config-build",
+    "build": "puffscoinjs-config-build",
     "prepublishOnly": "npm run test && npm run build",
     "coverage": "npm run build && istanbul cover _mocha",
     "coveralls": "npm run coverage && coveralls <coverage/lcov.info",
     "docs:build": "typedoc --out docs --mode file --readme none --theme markdown --mdEngine github --gitRevision master --excludeNotExported src",
-    "format": "ethereumjs-config-format",
-    "format:fix": "ethereumjs-config-format-fix",
-    "lint": "ethereumjs-config-lint",
-    "lint:fix": "ethereumjs-config-lint-fix",
+    "format": "puffscoinjs-config-format",
+    "format:fix": "puffscoinjs-config-format-fix",
+    "lint": "puffscoinjs-config-lint",
+    "lint:fix": "puffscoinjs-config-lint-fix",
     "test": "npm run lint && npm run test:node && npm run test:browser",
     "test:browser": "npm run build && karma start karma.conf.js",
     "test:node": "npm run build && istanbul test mocha -- --reporter spec",
-    "tsc": "ethereumjs-config-tsc",
-    "tslint": "ethereumjs-config-tslint",
-    "tslint:fix": "ethereumjs-config-tslint-fix"
+    "tsc": "puffscoinjs-config-tsc",
+    "tslint": "puffscoinjs-config-tslint",
+    "tslint:fix": "puffscoinjs-config-tslint-fix"
   },
   "husky": {
     "hooks": {
@@ -31,10 +31,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/ethereumjs/ethereumjs-util.git"
+    "url": "https://github.com/puffscoin/puffscoinjs-util.git"
   },
   "keywords": [
-    "ethereum",
+    "puffscoin",
     "utilties"
   ],
   "author": "mjbecze <mjbecze@gmail.com>",
@@ -84,9 +84,9 @@
   ],
   "license": "MPL-2.0",
   "bugs": {
-    "url": "https://github.com/ethereumjs/ethereumjs-util/issues"
+    "url": "https://github.com/puffscoin/puffscoinjs-util/issues"
   },
-  "homepage": "https://github.com/ethereumjs/ethereumjs-util",
+  "homepage": "https://github.com/puffscoin/puffscoinjs-util",
   "dependencies": {
     "bn.js": "^4.11.0",
     "create-hash": "^1.1.2",
@@ -96,9 +96,9 @@
     "secp256k1": "^3.0.1"
   },
   "devDependencies": {
-    "@ethereumjs/config-prettier": "^1.1.0",
-    "@ethereumjs/config-tsc": "^1.1.0",
-    "@ethereumjs/config-tslint": "^1.1.0",
+    "@puffscoinjs/config-prettier": "^1.1.0",
+    "@puffscoinjs/config-tsc": "^1.1.0",
+    "@puffscoinjs/config-tslint": "^1.1.0",
     "@types/bn.js": "^4.11.3",
     "@types/node": "^11.9.0",
     "babel-cli": "^6.26.0",
