--- a/package.json
+++ b/package.json
@@ -90,7 +90,7 @@
   "dependencies": {
     "bn.js": "^4.11.0",
     "create-hash": "^1.1.2",
-    "ethjs-util": "0.1.6",
+    "puffsjs-util": "0.1.6",
     "keccak": "^1.0.2",
     "rlp": "^2.2.3",
     "secp256k1": "^3.0.1"
